--- a/noteful-json-server/package.json
+++ b/noteful-json-server/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "noteful-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.9",
-    "@fortawesome/free-solid-svg-icons": "^5.6.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "date-fns": "^1.30.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "typeface-roboto": "0.0.54"
-  },
+  "name": "noteful-json-server",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "vercel --prod"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "predeploy": "npm audit",
+    "deploy": "git push heroku master",
+    "postdeploy": "npm run migrate:production",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "Alexis Santella",
+  "keywords": [],
+  "engines": {
+    "node": "10.11.0"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "helmet": "^4.2.0",
+    "knex": "^0.95.7",
+    "morgan": "^1.10.0",
+    "pg": "^7.18.2",
+    "postgrator-cli": "^3.2.0",
+    "supertest": "^6.0.1",
+    "xss": "^1.0.8"
+  },
   "devDependencies": {
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5"
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^1.18.9",
+    "supertest": "^6.0.1"
   }
 }
