--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.9",
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "darwin": "0.0.5",
     "date-fns": "^1.30.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -18,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "vercel --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
